data/derived/comb/progs/unify/prog6934.ml.out
Characters 48-49:
  in wwhile (b,b);;
               ^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a * bool
